@@ -35,6 +35,21 @@ a img {
  ! - <P></P></LI>
  ! - </UL>
   -->
+<DT>XXXX-XX-XX
+<DD>
+<UL>
+<LI>Works now with standard versions of Coq (&GT;= 8.4beta)
+    and Proof General (current development version)
+</LI>
+<LI>Update <EM>all</EM> sequents when existential variables get
+instantiated
+</LI>
+<LI>Display dependencies of existential variables
+</LI>
+<LI>various internal improvements
+<P></P></LI>
+</UL>
+
 <DT>2011-11-01
 <DD>
 <UL>
@@ -134,7 +149,7 @@ far as possible)
 <HR noshade size=2>
 <FONT SIZE="-2">
 last changed on 
-<!-- hhmts start --> 1 Nov 2011
+<!-- hhmts start --> 2 Jan 2012
 <!-- hhmts end -->
 by <A HREF="/index.html.en">Hendrik</A>
 </FONT></BODY> </HTML>
