@@ -1,5 +1,9 @@
 2012-01-02  Hendrik Tews  <tews@os.inf.tu-dresden.de>
 
+	* update README, changes, man page
+
+2012-01-02  Hendrik Tews  <tews@os.inf.tu-dresden.de>
+
 	* clean up copyright
 	* packaging in make-release
 
